| r is Release                                                                                      |
| p is Patch                                                                                        |
|        dd.mm.yyyy VERSION 1.m.r.p [Release Type]                                                  |
|        09.06.2019 VERISON 1.1.0.2 [PUBLIC RELEASE]                                                |
|        BUILD 750                                                                                  |
|---------------------------------------------------------------------------------------------------|
|  JOIN MY DISCORD                                                                                  |
|  jyles.club/discord                                                                               |
|  jyles.club/seedbot                                                                               |
|  @Seed#0001                                                                                       |
|---------------------------------------------------------------------------------------------------|
|  COLLABORATORS                 ║                                                                  |
| ═══════════════════════════════╝                                                                  |
| github/jylescoad-ward [Discord Bot]                                                               |
|                                                                                                   |
| github/FinchieDev     [DMOJ Plugin]                                                               |
| github/DarkoPengragon [Music Plugin]                                                              |
| github/BlueSpring     [NodeJS Eval Command]                                                       |
|----------------------------------------------------------------------------VERSION----------------|