@@ -1,7 +1,7 @@
 {
   "name": "SeedBot",
-  "version": "1.1.0.2",
-  "build": "750",
+  "version": "1.2",
+  "build": "753",
   "description": "A New and Improved Version of SeedBot",
   "ownerID": "230485481773596672",
   "engines": {
@@ -12,6 +12,7 @@
     "start": "node bot.js"
   },
   "dependencies": {
+    "asciify": "^1.3.5",
     "discord.js": "^11.5.1",
     "discord.js-musicbot-addon": "^13.5.2",
     "opusscript": "0.0.6",
